# CrawlingSummaryBot

./: .env.example  .gitignore  PLAN.md  README.md  app.db-journal  index.html  package-lock.json  package.json  pyproject.toml
backend/: README.md
backend/app/: config.py  database.py  main.py  models.py  repository.py  schemas.py
backend/app/api/routes/: crawl.py  daily_summaries.py  delivery_logs.py  health.py  issues.py  runtime_profile.py
backend/app/services/: gnews_api_crawler.py  html_source_crawler.py  issue_ingestion.py  multi_source_crawler.py  naver_latest_crawler.py  openai_summary.py  runtime_profile.py  scheduler.py  slack_reporter.py  source_types.py  topic_classifier.py  x_experimental_crawler.py
backend/app/services/crawling/: __init__.py  gnews_api_crawler.py  html_source_crawler.py  multi_source_crawler.py  naver_latest_crawler.py  robots_policy.py  source_registry.py  source_types.py  x_experimental_crawler.py
backend/app/services/ingestion/: issue_ingestion.py  topic_classifier.py
backend/app/services/reporting/: daily_digest_retrieval.py  daily_summary.py  openai_summary.py  slack_reporter.py
backend/app/services/runtime/: crawl_control.py  runtime_profile.py  scheduler.py
db/: ERD.md  schema.sql
src/: App.vue  styles.css
tests/: conftest.py  test_api.py  test_crawl_control.py  test_daily_summary.py  test_naver_latest_crawler.py  test_robots_policy.py  test_scheduler.py  test_topic_classifier.py
