[project]
name = "ai-issue-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for the AI issue monitoring prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "faiss-cpu>=1.12.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=0.3.27",
  "langchain-openai>=0.3.29",
  "numpy>=2.3.0",
  "openai>=2.3.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "twscrape>=0.17.0",
]

[dependency-groups]
dev = [
  "alembic>=1.13.0",
  "pytest>=8.3.0",
]

[tool.uv]
package = false
